tests/miniJava/neg/005272_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] static java ( ) { return 0 ; } }
